<resources>
    <string name="app_name">Music Player</string>
    <string name="title_home">Home</string>
    <string name="title_songs">Songs</string>
    <string name="title_albums">Albums</string>
    <string name="title_artists">Artists</string>
    <string name="title_playlists">Playlists</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="songs_fragment">Songs Fragment</string>
    <string name="albums_fragment">Albums Fragment</string>
    <string name="artists_fragment">Artists Fragment</string>
    <string name="playlists_fragment">Playlists Fragment</string>

</resources>
