<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_songs"
        android:icon="@drawable/ic_songs_black_24dp"
        android:title="@string/title_songs" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_albums_black_24dp"
        android:title="@string/title_albums" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_artists_black_24dp"
        android:title="@string/title_artists" />

    <item
        android:id="@+id/navigation_playlists"
        android:icon="@drawable/ic_playlists_black_24dp"
        android:title="@string/title_playlists" />

</menu>
